# FavoritaForecast

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
results/: results_catboost_eval_data.json  results_catboost_test_data.json
src/: prepare_features.py  train_model.py
