[project]
name = "favoritaforecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.4.0",
    "adagio==0.2.6",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "catboost==1.2.10",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "cloudpickle==3.1.2",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "coreforecast==0.0.17",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.4.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.25.2",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "fugue==0.9.7",
    "graphviz==0.21",
    "grpcio==1.78.0",
    "idna==3.11",
    "iprogress==0.4",
    "ipykernel==7.2.0",
    "ipython==9.11.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kaggle>=2.0.0",
    "kagglehub==1.0.0",
    "kagglesdk==0.1.16",
    "kiwisolver==1.5.0",
    "lightning==2.6.1",
    "lightning-utilities==0.15.3",
    "llvmlite==0.46.0",
    "markdown==3.10.2",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "narwhals==2.18.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numba==0.64.0",
    "numpy==2.4.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "packaging==26.0",
    "pandas==2.3.3",
    "parso==0.8.6",
    "patsy==1.0.2",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "plotly==6.6.0",
    "polars==1.39.2",
    "polars-runtime-32==1.39.2",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==7.34.0",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==23.0.1",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytorch-forecasting==1.6.1",
    "pytorch-lightning==2.6.1",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "scikit-base==0.13.1",
    "scikit-learn==1.8.0",
    "scipy==1.15.3",
    "setuptools==82.0.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "statsforecast==2.0.3",
    "statsmodels==0.14.6",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.6.0",
    "torch==2.10.0",
    "torchmetrics==1.9.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "triad==1.0.2",
    "triton==3.6.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "utilsforecast==0.2.15",
    "wcwidth==0.6.0",
    "werkzeug==3.1.6",
    "yarl==1.23.0",
]
